--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape>
-            <gradient android:angle="120" android:startColor="@color/dark_blue" android:endColor="@color/light_blue"
-                android:type="linear"/>
-        </shape>
-    </item>
-
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:startColor="@color/violet"
+        android:endColor="@color/light_blue"
+        android:angle="270" />
+</shape>
