--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,13 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_blue"
+    android:background="@drawable/gradient_background"
     tools:context=".LoginRegistration.SignupActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/signupTxt"
@@ -37,17 +36,16 @@
             android:layout_marginTop="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:backgroundTint="@color/white1"
+            android:textColorHint="@color/white1"
+            android:textColor="@color/white1"
             android:inputType="text"
             android:imeOptions="actionNext"
             android:maxLines="1"
-
             android:hint="Full Name"
             android:drawableStart="@drawable/ic_name"
             android:drawablePadding="10dp"
-            android:drawableTint="@color/yellow"
+            android:drawableTint="@color/white2"
             android:paddingBottom="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -61,13 +59,16 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:backgroundTint="@color/white1"
+            android:textColorHint="@color/white1"
+            android:textColor="@color/white1"
+            android:inputType="text"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
             android:hint="Email"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="10dp"
-            android:drawableTint="@color/yellow"
+            android:drawableTint="@color/white2"
             android:paddingBottom="15dp"
             app:layout_constraintEnd_toEndOf="@+id/name"
             app:layout_constraintStart_toStartOf="@+id/name"
@@ -80,13 +81,13 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:backgroundTint="@color/white1"
+            android:textColorHint="@color/white1"
+            android:textColor="@color/white1"
             android:hint="Password"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
-            android:drawableTint="@color/yellow"
+            android:drawableTint="@color/white2"
             android:paddingBottom="15dp"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/emailSignup"
@@ -100,13 +101,13 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
+            android:backgroundTint="@color/white1"
+            android:textColorHint="@color/white1"
             android:hint="Confirm Password"
-            android:textColor="@color/white"
+            android:textColor="@color/white1"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
-            android:drawableTint="@color/yellow"
+            android:drawableTint="@color/white2"
             android:paddingBottom="15dp"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/passwordSignup"
@@ -123,7 +124,7 @@
             android:layout_marginRight="50dp"
             android:fontFamily="@font/poppins_bold"
             android:text="Sign up"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/violet"
             android:textSize="16sp"
             android:textStyle="bold"
             android:paddingTop="5dp"
@@ -153,6 +154,8 @@
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
             app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/fui_transparent"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -161,10 +164,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:background="@color/white"
-                android:src="@drawable/ic_google"
-                >
-            </ImageView>
+                android:src="@drawable/ic_google1"/>
+
 
         </androidx.cardview.widget.CardView>
 
