--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="blue">#1DBEF5</color>
     <color name="white1">#EBF2FC</color>
     <color name="white2">#DBE9F6</color>
+    <color name="dark_blue1">#0A1E53</color>
 
 
 </resources>
