--- a/app/src/main/res/drawable/et_background.xml
+++ b/app/src/main/res/drawable/et_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/black"
+    <stroke android:color="@color/violet"
         android:width="2dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/white1"/>
     <corners android:radius="10dp"/>
 </shape>
