--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/gradient_background"
     tools:context=".LoginRegistration.GetStarted">
 
     <LinearLayout
@@ -30,7 +30,7 @@
             android:layout_marginRight="50dp"
             android:fontFamily="@font/poppins_bold"
             android:text="The key to your destination."
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/violet"
             android:textSize="40sp"
             android:textStyle="bold"/>
 
@@ -41,52 +41,15 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="100dp"
             android:layout_marginRight="50dp"
-            android:background="@drawable/btn_login_signup"
-            android:backgroundTint="@color/yellow"
+            android:background="@drawable/btn_violet"
             android:fontFamily="@font/poppins_bold"
             android:paddingTop="5dp"
             android:text="GET STARTED"
-            android:textColor="@color/yellow"
-            android:textSize="19sp"
+            android:textColor="@color/white1"
+            android:textSize="18sp"
             android:textStyle="bold"/>
 
-
     </LinearLayout>
-
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:layout_marginLeft="50dp"-->
-<!--        android:layout_marginRight="50dp"-->
-<!--        android:gravity="center"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/loginBtn2">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/dontHaveAcc2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_medium"-->
-<!--            android:text="You don't have an account?"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textSize="16sp"-->
-<!--            android:paddingLeft="5dp"-->
-<!--            android:paddingRight="5dp"/>-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/signUp2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/poppins_medium"-->
-<!--            android:text="Sign Up."-->
-<!--            android:textColor="@color/dark_blue"-->
-<!--            android:textSize="16sp"-->
-<!--            android:paddingLeft="5dp"-->
-<!--            android:paddingRight="5dp"/>-->
-
-<!--    </LinearLayout>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
