--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_blue"
+    android:background="@drawable/gradient_background_login_signup"
     android:fillViewport="true"
     tools:context=".LoginRegistration.LoginActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,13 +38,16 @@
             android:layout_marginTop="70dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/white1"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="10dp"
-            android:drawableTint="@color/yellow"
+            android:drawableTint="@color/white2"
+            android:inputType="text"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
             android:hint="Email"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:textColorHint="@color/white1"
+            android:textColor="@color/white1"
             android:paddingBottom="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -59,11 +62,11 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:hint="Password"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:backgroundTint="@color/white1"
+            android:textColorHint="@color/white1"
+            android:textColor="@color/white1"
             android:drawableStart="@drawable/ic_password"
-            android:drawableTint="@color/yellow"
+            android:drawableTint="@color/white2"
             android:drawablePadding="10dp"
             android:paddingBottom="15dp"
             android:inputType="textPassword"
@@ -94,9 +97,8 @@
             android:fontFamily="@font/poppins_bold"
             android:text="Login"
             android:textStyle="bold"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/violet"
             android:textSize="16sp"
-            android:paddingTop="5dp"
             android:background="@drawable/btn_login_signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -140,6 +142,8 @@
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
             app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/fui_transparent"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -148,8 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:background="@color/white"
-                android:src="@drawable/ic_google"
+                android:src="@drawable/ic_google1"
                 >
             </ImageView>
 
@@ -159,4 +162,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
-
