--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
+    android:background="@drawable/gradient_background_login_signup"
     tools:context=".LoginRegistration.SignupActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -127,7 +127,6 @@
             android:textColor="@color/violet"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:paddingTop="5dp"
             android:background="@drawable/btn_login_signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -140,7 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="or sign in with:"
+            android:text="or sign up with:"
             android:textSize="16sp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/signupBtn"
