--- a/app/src/main/res/layout/fragment_book_car.xml
+++ b/app/src/main/res/layout/fragment_book_car.xml
@@ -13,9 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Book a Car"
-        android:textSize="25dp"
-        android:textColor="@color/black"
+        android:textSize="40dp"
+        android:textColor="@color/dark_blue1"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +36,10 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Book now"
+        android:textSize="18sp"
+        android:background="@drawable/btn_violet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
