--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Explore.ExploreFragmentMenu"
-    android:background="@color/grayish_blue1"
+    android:background="@drawable/gradient_background"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,11 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:paddingLeft="30dp"
+            android:fontFamily="@font/poppins_bold"
             android:text="Explore"
-            android:textColor="@color/black"
-            android:textSize="25dp"
+            android:textColor="@color/dark_blue1"
+            android:textSize="30dp"
             android:textStyle="bold"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
