--- a/app/src/main/res/layout/hosted_item.xml
+++ b/app/src/main/res/layout/hosted_item.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
+    android:layout_height="270dp"
     app:cardCornerRadius="20dp"
+    app:cardElevation="10dp"
+    app:cardBackgroundColor="@color/white"
     android:layout_marginTop="15dp"
     android:layout_marginLeft="35dp"
     android:layout_marginRight="35dp">
@@ -16,7 +18,7 @@
         <ImageView
             android:id="@+id/ivCarImage"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +27,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,22 +36,24 @@
 
             <TextView
                 android:id="@+id/tvBrandModelYear"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
+                android:paddingLeft="20dp"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Brand, Model, Year"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue1"
                 android:textSize="16dp" />
 
             <TextView
                 android:id="@+id/tvPlateNumber"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
+                android:paddingLeft="20dp"
+                android:fontFamily="@font/poppins_medium"
                 android:text="Plate Number"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue1"
                 android:textSize="16dp" />
         </LinearLayout>
 
