--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,14 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.TARA" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_blue</item> <!--menu selected-->
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorAccent">@color/yellow</item>
+        <item name="colorPrimary">@color/violet</item> <!--menu selected-->
+        <item name="colorPrimaryVariant">@color/white1</item>
+        <item name="colorOnPrimary">@color/white2</item>
+        <item name="colorAccent">@color/dark_blue1</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/grey_font</item><!--button color-->
+        <item name="colorOnSecondary">@color/white1</item><!--button color-->
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/grayish_blue2</item> <!--notif bar-->
         <!-- Customize your theme here. -->
